stress-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 48m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/rewrite-target: /
  name: locust-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: locust-master
            port:
              number: 8089
        path: /locust
        pathType: Prefix
